<resources>
    <string name="app_name">Learn Android</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Learn Android</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_exit">Exit</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="code">Code:</string>
    <string name="first_way">First Way:</string>
    <string name="second_way">Second Way:</string>
    <string name="description">Description:</string>
    <string name="copy_code">Click Copy Code button at bottom to copy full code. Thanks</string>
    <string name="nothing_here"><![CDATA[Nothing to be copied..!! Just watch & do it yourself.]]></string>
    <string name="expandable_test">Ward Cunningham, Inventor of the Wiki.webm Interview with Ward Cunningham, inventor of the wiki. A wiki (/ˈwɪki/ (About this sound listen) WIK-ee) is a website on which users collaboratively modify content and structure directly from the web browser. In a typical wiki, text is written using a simplified markup language and often edited with the help of a rich-text editor.[1]    . A wiki is run using wiki software, otherwise known as a wiki engine. A wiki engine is a type of content management system, but it differs from most other such systems, including blog software, in that the content is created without any defined owner or leader, and wikis have little implicit structure, allowing structure to emerge according to the needs of the users.[2] There are dozens of different wiki engines in use, both standalone and part of other software, such as bug tracking systems. Some wiki engines are open source, whereas others are proprietary. Some permit control over different functions (levels of access); for example, editing rights may permit changing, adding or removing material. Others may permit access without enforcing access control. Other rules may be imposed to organize content. The online encyclopedia project Wikipedia is by far the most popular wiki-based website, and is one of the most widely viewed sites of any kind in the world, having been ranked in the top ten since 2007.[3] Wikipedia is not a single wiki but rather a collection of hundreds of wikis, one for each language. There are tens of thousands of other wikis in use, both public and private, including wikis functioning as knowledge management resources, notetaking tools, community websites and intranets. The English-language Wikipedia has the largest collection of articles; as of September 2016, it had over five million articles. Ward Cunningham, the developer of the first wiki software, WikiWikiWeb, originally described it as "the simplest online database that could possibly work".[4] "Wiki" (pronounced [ˈwiki][note 1]) is a Hawaiian word meaning "quick</string>
    <string name="step_1">Step 1:</string>
    <string name="step_2">Step 2:</string>
    <string name="step_3">Step 3:</string>
    <string name="step_4">Step 4:</string>
    <string name="step_5">Step 5:</string>
    <string name="step_6">Step 6:</string>
    <string name="step_7">Step 7:</string>
    <string name="step_8">Step 8:</string>
    <string name="step_9">Step 9:</string>
    <string name="step_10">Step 10:</string>
    <string name="simple_alert_dialog">
        AlertDialog.Builder dialog = new AlertDialog.Builder(AlertDialogSimple.this); //MainActivity.this(for Activity)
                                                                                                    // or getActivity(for Fragment)\n\n
        dialog.setCancelable(true);\n
        dialog.setTitle("Title Of Dialog");\n
        dialog.setMessage("Message will be added here..");\n
                dialog.setIcon(R.drawable.logo);\n

                dialog.setPositiveButton("First", new DialogInterface.OnClickListener() {\n
                    @Override\n
                    public void onClick(DialogInterface dialog, int which) {\n\n
                        Toast.makeText(AlertDialogSimple.this, "you have clicked first button", Toast.LENGTH_SHORT).show();\n
                    }\n
                });\n\n

                dialog.setNegativeButton("Second", new DialogInterface.OnClickListener() {\n
                    @Override\n
                    public void onClick(DialogInterface dialog, int which) {\n\n
                        Toast.makeText(AlertDialogSimple.this, "you have clicked second button", Toast.LENGTH_SHORT).show();\n
                    }\n
                });\n\n

                dialog.setNeutralButton("Third", new DialogInterface.OnClickListener() {\n
                    @Override\n
                    public void onClick(DialogInterface dialog, int which) {\n\n
                        Toast.makeText(AlertDialogSimple.this, "you have clicked third button", Toast.LENGTH_SHORT).show();\n
                    }\n
                });\n\n

                dialog.show();\n\n</string>
    <string name="check_box_alert_dialog_first">
                final String[] cities = {"Rawalpindi", "Islamabad","Karachi", "Lahore","Peshawar", "Quetta"}; //checkboxes values\n\n
                final ArrayList&lt;String&gt; checkedItems = new ArrayList&lt;&gt;();   //checkboxes that you select, will be stored in arraylist\n\n


                AlertDialog.Builder dialog = new AlertDialog.Builder(AlertDialogWithCheckBoxes.this); //MainActivity.this(for Activity)
                                                                                                    // or getActivity(for Fragment)\n\n

                dialog.setCancelable(true); //true->click anywhere on screen will hide alert dialog..\n\n
                dialog.setTitle("Select cities");\n
                //dialog.setIcon(R.drawable.logo);\n

                dialog.setMultiChoiceItems(cities, null, new DialogInterface.OnMultiChoiceClickListener() {\n
                    @Override\n
                    public void onClick(DialogInterface dialog, int which, boolean isChecked) {\n\n
                        if (isChecked) {\n
                            checkedItems.add(cities[which]); //item added to arraylist\n
                        } else {\n
                            checkedItems.remove(cities[which]); //item removed from array list\n
                        }\n
                    }\n
                });\n\n

                dialog.setPositiveButton("Select", new DialogInterface.OnClickListener() {\n
                    @Override\n
                    public void onClick(DialogInterface dialog, int which) {\n\n
                        StringBuilder stringBuilder = new StringBuilder();\n
                        for (String item : checkedItems) {\n
                            stringBuilder.append(item).append(", ");\n
                        }\n
                        Toast.makeText(AlertDialogWithCheckBoxes.this, "You have selected: "+stringBuilder, Toast.LENGTH_SHORT).show();\n
                    }\n
                });\n\n

                dialog.setNegativeButton("Cancel", new DialogInterface.OnClickListener() {\n
                    @Override\n
                    public void onClick(DialogInterface dialog, int which) {\n
                        Toast.makeText(AlertDialogWithCheckBoxes.this, "cancelled..", Toast.LENGTH_SHORT).show();\n
                    }\n
                });\n\n


                dialog.show();\n
    </string>
</resources>