<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ExtrasStrings"
    android:padding="11dp"
    android:background="@color/colorWhite"
    >

    <TextView
        android:id="@+id/tvDescLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="you can add strings here to use in your app easily. one more advantage of adding strings here is that you can change any string later so that it is changed everywhere in your app."
        android:layout_below="@+id/tvDescLabel"
        android:textColor="@color/colorBlack"
        />

    <TextView
        android:id="@+id/tvCodeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/code"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:layout_below="@+id/tvDesc"
        android:layout_marginTop="3dp"
        />

    <ImageView
        android:id="@+id/ivCodeColors"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_below="@+id/tvCodeLabel"
        android:src="@drawable/strings_extras"
        android:scaleType="fitXY"
        android:contentDescription="@string/app_name"
        />



</RelativeLayout>