<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:padding="11dp"
    android:background="@drawable/back"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AnimationExplosion">



    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/LL_FoldingExplain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp"
        android:background="@color/colorBlackTransparent"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Explosion Animation is used to explode the view. it can be used when you want ot hide any view on click."
            android:textColor="@color/colorWhite"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_1"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add this to your app level build.gradle"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="3dp"
            />

        <ImageView
            android:id="@+id/ivCodeExplosionAnimationStep1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/explosion_anim_step1"
            android:contentDescription="@string/app_name"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginTop="3dp"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add add this to java file"
            android:textColor="@color/colorWhite"
            android:layout_marginTop="3dp"
            />

        <ImageView
            android:id="@+id/ivCodeExplosionAnimationStep2"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/explosion_anim_step2"
            android:contentDescription="@string/app_name"
            />

        <info.hoang8f.widget.FButton
            android:id="@+id/btnDemoExplosionAnimation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Demo"
            android:textAllCaps="false"
            android:padding="11dp"
            android:background="@color/colorBlack"
            android:textColor="@color/colorWhite"
            android:textStyle="bold"
            android:layout_marginTop="17dp"
            />

    </LinearLayout>

</ScrollView>