<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="@color/colorWhite"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.ExtrasChips">

    <RelativeLayout
        android:id="@+id/RL_ExtrasChips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="11dp"
        >


        <TextView
            android:id="@+id/tvDescLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Chips are useful when you are building any app having module like message or email. We can show them in chips for attractive design.."
            android:layout_below="@+id/tvDescLabel"
            android:textColor="@color/colorBlack"
            />

        <TextView
            android:id="@+id/tvCodeLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/code"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_below="@+id/tvDesc"
            android:layout_marginTop="3dp"
            />


        <TextView
            android:id="@+id/tvStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_1"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_below="@+id/tvCodeLabel"
            android:layout_marginTop="3dp"
            />


        <TextView
            android:id="@+id/tvDescStep1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add below code in you build gradle.. \n Gradle Scripts\\build.gradle"
            android:layout_below="@+id/tvStep1"
            android:textColor="@color/colorBlack"
            />


        <ImageView
            android:id="@+id/ivCodeChipsStep1"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@+id/tvDescStep1"
            android:src="@drawable/extras_chips_step1"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            />


        <TextView
            android:id="@+id/tvStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_2"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_below="@+id/ivCodeChipsStep1"
            android:layout_marginTop="3dp"
            />


        <TextView
            android:id="@+id/tvDescStep2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add below code in your xml file.. "
            android:layout_below="@+id/tvStep2"
            android:textColor="@color/colorBlack"
            />


        <ImageView
            android:id="@+id/ivCodeChipsStep2"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_below="@+id/tvDescStep2"
            android:src="@drawable/extras_chips_step2"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            />


        <TextView
            android:id="@+id/tvStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_3"
            android:textColor="@color/colorBlack"
            android:textStyle="bold"
            android:layout_below="@+id/ivCodeChipsStep2"
            android:layout_marginTop="3dp"
            />


        <TextView
            android:id="@+id/tvDescStep3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Add below code in your java class.. "
            android:layout_below="@+id/tvStep3"
            android:textColor="@color/colorBlack"
            />


        <ImageView
            android:id="@+id/ivCodeChipsStep3"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_below="@+id/tvDescStep3"
            android:src="@drawable/extras_chips_step3"
            android:scaleType="fitXY"
            android:contentDescription="@string/app_name"
            />

    </RelativeLayout>

</ScrollView>